--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,33 +7,87 @@
     <x>0</x>
     <y>0</y>
     <width>1280</width>
-    <height>714</height>
+    <height>717</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(46, 52, 54);
+selection-background-color: rgb(50, 113, 172);
+color:white;
+</string>
+  </property>
+  <property name="documentMode">
+   <bool>true</bool>
+  </property>
   <widget class="QWidget" name="imageView">
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QScrollArea" name="AP">
+      <property name="cursor" stdset="0">
+       <cursorShape>ArrowCursor</cursorShape>
+      </property>
+      <property name="lineWidth">
+       <number>1</number>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAsNeeded</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAsNeeded</enum>
+      </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QAbstractScrollArea::AdjustIgnored</enum>
+      </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
-      <widget class="QWidget" name="scrollAreaWidgetContentsAP">
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
+      <widget class="QWidget" name="APContent">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>578</width>
-         <height>644</height>
+         <width>638</width>
+         <height>691</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
-         <widget class="QLabel" name="apLabel">
+         <widget class="QLabel" name="APLabel">
           <property name="text">
-           <string>AP Label</string>
+           <string/>
           </property>
          </widget>
         </item>
@@ -42,31 +96,39 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>PushButton</string>
-      </property>
-     </widget>
-    </item>
-    <item>
      <widget class="QScrollArea" name="LAT">
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
-      <widget class="QWidget" name="scrollAreaWidgetContentsLAT">
+      <widget class="QWidget" name="LATContent">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>577</width>
-         <height>644</height>
+         <width>638</width>
+         <height>691</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
-         <widget class="QLabel" name="latLabl">
+         <widget class="QLabel" name="LATLabel">
           <property name="text">
-           <string>LAT Label</string>
+           <string/>
           </property>
          </widget>
         </item>
@@ -82,42 +144,41 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>25</height>
+     <height>24</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menu_File">
+   <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>&amp;File</string>
     </property>
-    <addaction name="action_Exit"/>
+    <addaction name="actionExit"/>
    </widget>
-   <widget class="QMenu" name="menu_AP">
+   <widget class="QMenu" name="menuAP">
     <property name="title">
      <string>&amp;AP</string>
     </property>
-    <addaction name="action_Open_AP"/>
-    <addaction name="action_Close_AP"/>
+    <addaction name="actionOpenAP"/>
+    <addaction name="actionCloseAP"/>
    </widget>
-   <widget class="QMenu" name="menu_LAT">
+   <widget class="QMenu" name="menuLAT">
     <property name="title">
      <string>&amp;LAT</string>
     </property>
-    <addaction name="action_Open_LAT"/>
-    <addaction name="action_Close_LAT"/>
+    <addaction name="actionOpenLAT"/>
+    <addaction name="actionCloseLAT"/>
    </widget>
-   <widget class="QMenu" name="menu_Export">
+   <widget class="QMenu" name="menuExport">
     <property name="title">
      <string>&amp;Export</string>
     </property>
-    <addaction name="action3D_model_stl"/>
+    <addaction name="actionViewSTL"/>
    </widget>
-   <addaction name="menu_File"/>
-   <addaction name="menu_AP"/>
-   <addaction name="menu_LAT"/>
-   <addaction name="menu_Export"/>
+   <addaction name="menuFile"/>
+   <addaction name="menuAP"/>
+   <addaction name="menuLAT"/>
+   <addaction name="menuExport"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
-  <action name="action_Exit">
+  <action name="actionExit">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -143,27 +204,27 @@
     <bool>true</bool>
    </property>
   </action>
-  <action name="action_Open_AP">
+  <action name="actionOpenAP">
    <property name="text">
     <string>&amp;Open</string>
    </property>
   </action>
-  <action name="action_Close_AP">
+  <action name="actionCloseAP">
    <property name="text">
     <string>&amp;Close</string>
    </property>
   </action>
-  <action name="action_Open_LAT">
+  <action name="actionOpenLAT">
    <property name="text">
     <string>&amp;Open</string>
    </property>
   </action>
-  <action name="action_Close_LAT">
+  <action name="actionCloseLAT">
    <property name="text">
     <string>&amp;Close</string>
    </property>
   </action>
-  <action name="action3D_model_stl">
+  <action name="actionViewSTL">
    <property name="text">
     <string>3D model(.stl)</string>
    </property>
