feat: Add actions to tool bar(revise later)

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -131,7 +131,15 @@ color:white;
     </property>
     <addaction name="actionViewSTL"/>
    </widget>
+   <widget class="QMenu" name="menu_Edit">
+    <property name="title">
+     <string>&amp;Edit</string>
+    </property>
+    <addaction name="actionUndo"/>
+    <addaction name="actionRedo"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menu_Edit"/>
    <addaction name="menuAP"/>
    <addaction name="menuLAT"/>
    <addaction name="menuExport"/>
@@ -149,6 +157,18 @@ color:white;
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
+   <addaction name="actionClose"/>
+   <addaction name="separator"/>
+   <addaction name="actionOpenAP"/>
+   <addaction name="actionLineAP"/>
+   <addaction name="actionOpenLAT"/>
+   <addaction name="actionLineLAT"/>
+   <addaction name="separator"/>
+   <addaction name="actionUndo"/>
+   <addaction name="actionRedo"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionExit">
@@ -182,19 +202,9 @@ color:white;
     <string>&amp;Open</string>
    </property>
   </action>
-  <action name="actionCloseAP">
-   <property name="text">
-    <string>&amp;Close</string>
-   </property>
-  </action>
   <action name="actionOpenLAT">
    <property name="text">
     <string>&amp;Open</string>
-   </property>
-  </action>
-  <action name="actionCloseLAT">
-   <property name="text">
-    <string>&amp;Close</string>
    </property>
   </action>
   <action name="actionViewSTL">
@@ -242,14 +252,19 @@ color:white;
     <string>&amp;Save</string>
    </property>
   </action>
-  <action name="action_Exit">
-   <property name="text">
-    <string>&amp;Exit</string>
-   </property>
-  </action>
   <action name="actionSaveas">
    <property name="text">
     <string>Save &amp;As</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>&amp;Undo</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="text">
+    <string>&amp;Redo</string>
    </property>
   </action>
  </widget>
