--- a/icons/resource.qrc
+++ b/icons/resource.qrc
@@ -2,5 +2,11 @@
     <qresource prefix="/icons">
         <file>LAT_icon.jpg</file>
         <file>AP_icon.jpg</file>
+        <file>document-new.png</file>
+        <file>document-open.png</file>
+        <file>document-save.png</file>
+        <file>edit-redo.png</file>
+        <file>edit-undo.png</file>
+        <file>window-close.png</file>
     </qresource>
 </RCC>
